Add SnakeBase and Snake Element

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,4 +9,8 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/SnakeGamemodeBp.SnakeGamemodeBp_C
+EditorStartupMap=/Game/Map.Map
+GameDefaultMap=/Game/Map.Map
 
