--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,3 +14,7 @@ GlobalDefaultGameMode=/Game/SnakeGamemodeBp.SnakeGamemodeBp_C
 EditorStartupMap=/Game/Map.Map
 GameDefaultMap=/Game/Map.Map
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AntiAliasing=0
+
