--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,8 +13,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 GlobalDefaultGameMode=/Game/SnakeGamemodeBp.SnakeGamemodeBp_C
 EditorStartupMap=/Game/Map.Map
 GameDefaultMap=/Game/Map.Map
+GameInstanceClass=/Game/SnakeGameInstanceBp.SnakeGameInstanceBp_C
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AntiAliasing=0
-
