--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,9 +10,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/SnakeGamemodeBp.SnakeGamemodeBp_C
-EditorStartupMap=/Game/Map.Map
-GameDefaultMap=/Game/Map.Map
+GlobalDefaultGameMode=/Game/MenuGameModeBp.MenuGameModeBp_C
+EditorStartupMap=/Game/Menu.Menu
+GameDefaultMap=/Game/Menu.Menu
 GameInstanceClass=/Game/SnakeGameInstanceBp.SnakeGameInstanceBp_C
 
 [/Script/Engine.RendererSettings]
